arreglado la vista de buscar la playlist

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,20 +8,20 @@
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
-
-       <SearchView
+       <EditText
            android:id="@+id/sv_playlist"
            android:layout_width="match_parent"
-           android:layout_height="wrap_content"
+           android:layout_height="43dp"
            android:hint="Search a playlist"
            android:layout_alignParentLeft="true"
            android:layout_alignLeft="@+id/btn_search_playlist"/>
 
        <Button
            android:id="@+id/btn_search_playlist"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_alignParentRight="true"/>
+           android:layout_width="40dp"
+           android:layout_height="40dp"
+           android:layout_alignParentRight="true"
+           android:background="@drawable/ic_search_black_24dp" />
    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
